--- a/application/index/view/index/detail.html
+++ b/application/index/view/index/detail.html
@@ -28,7 +28,7 @@
                 <h2>猜你喜欢</h2>
                 <ul>
                     {foreach $favors as $f}
-                    <li class="item"><a target="_blank" href="/detail/{$f.code}/{$f.id}">{$f.title}</a></li>
+                    <li class="item"><a target="_blank" href="/detail/111/{$f.id}">{$f.title}</a></li>
                     {/foreach}
                 </ul>
             </div>
