百度图片爬虫

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -5,6 +5,7 @@
     <title>今日快报</title>
     <link rel="stylesheet" type="text/css" href="/static/css/common.css" />
     <script type="text/javascript" src="/static/js/jquery.js"></script>
+</head>
 <body>
     {include file="../application/index/view/common/menu.html" /}
     <div class="list">
