--- a/application/index/view/index/detail.html
+++ b/application/index/view/index/detail.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>{$detail.title}--今日快报</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/common.css">    
+    <link rel="stylesheet" type="text/css" href="/static/css/common.css">   
+</head> 
 <body>
     {include file="common/menu" /}
     <div class="detail">
