--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -2,20 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>登录-今日快报</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/login/login.css" />
+    <title>登录-聊天室</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/common.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/login.css" />
 <body>
-    <form action="/login" method="post">
-        {notempty name="msg"}<span style="text-align: center;color:red;">{$msg}</span>{/notempty}       
-        <label>
-            <span>账号:</span>
-            <input type="text" name="username" />
-        </label>
-        <label>
-            <span>密码:</span>
-            <input type="password" name="password" />
-        </label>
-        <button type="submit">登录</button>
+    <form action="/login" method="post" class="login-wrap" name="loginForm">
+        {notempty name="msg"}<p class="error-wrap">{$msg}</p>{/notempty}       
+        <p><label><span>账号:</span><input type="text" name="username" placeholder="请输入账号" /></label></p>
+        <p><label><span>密码:</span><input type="password" name="password" placeholder="请输入密码" /></label></p>
+        <a href="javascript:loginForm.submit();">登录</button>&nbsp;&nbsp;<a href="/register">注册</a>
     </form>
 </body>
 </html>
