--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="msg-send-wrap">
-                <textarea class="msg-send-content"></textarea>
+                <textarea class="msg-send-content" placeholder="Alt+Enter发送消息"></textarea>
                 <div class="msg-btn-wrap">
                     <a class="msg-send-btn" href="javascript:void(0)">发送</a>
                 </div>
